[package]
name = "paperwork_service_gatekeeper"
version = "0.1.0"
authors = ["Marius <marius@twostairs.com>"]
edition = "2018"

[dependencies]
hyper-reverse-proxy = "0.4.0"
hyper = "0.12.29"
futures = "0.1.27"
frank_jwt = "3.1.1"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
url = "1.7.2"
