[package]
name = "paperwork_service_gatekeeper"
version = "0.1.0"
authors = ["Marius <marius@twostairs.com>"]
edition = "2018"

[dependencies]
hyper-reverse-proxy = "0.4.0"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"
frank_jwt = "3.1.2"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.48"
url = "2.1.1"
