[package]
name = "paperwork_service_gatekeeper"
version = "0.1.0"
authors = ["Marius <marius@twostairs.com>"]
edition = "2018"

[dependencies]
hyper-reverse-proxy = { git = "https://github.com/felipenoris/hyper-reverse-proxy.git" }
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
frank_jwt = "3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2"
